# aoc

./: .gitignore  Cargo.toml  add-day.sh  day24.z3
aoc22/: Cargo.toml  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  fetch-input.sh  lib.rs  main.rs  run.rs
aoc23/: Cargo.toml  fetch-input.sh
aoc23/benches/: bench.rs
aoc23/src/: day01.py  day01.rs  day03.rs  day04.rs  day05.rs  day08.rs  day09.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day22.rs  day23.rs  day24.rs  main.rs  utils.rs
benches/: day02.rs  day03.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day24.z3  day25.rs  lib.rs  main.rs  run.rs  utils.rs
utils/src/: lib.rs
