[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# [profile.release]
# lto = "fat"
# codegen-units = 1

[[bin]]
name = "aoc23"
path = "src/run.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
fnv = "1.0.7"
indicatif = { version = "0.17.7", features = ["rayon", "vt100"] }
itertools = "0.12.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[dev-dependencies]
criterion = "0.5.1"
