[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc"
path = "src/main.rs"

[workspace]
members = [
  "aoc22",
  "aoc23",
  "utils",
]

[workspace.dependencies]
aoc22 = { path = "./aoc22" }
aoc23 = { path = "./aoc23" }
utils = { path = "./utils" }

criterion = { version = "0.5.1", features = ["html_reports"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
indicatif = { version = "0.17.7", features = ["rayon", "vt100"] }
fnv = "1.0.7"
itertools = "0.12.0"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[dependencies]
aoc22 = { workspace = true }
aoc23 = { workspace = true }
