[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# [profile.release]
# lto = "fat"
# codegen-units = 1

[lib]
name = "aoc23"
path = "src/lib.rs"

[[bin]]
name = "aoc23"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
utils = { workspace = true }
criterion = { workspace = true }
crossbeam = { workspace = true }
indicatif = { workspace = true }
fnv = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
z3 = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
